# doc-viewer

./: .gitignore  CMakeLists.txt
core-doc-viewer/: CMakeLists.txt  main.cpp
ui-doc-viewer/: CMakeLists.txt  main.cpp
ui-doc-viewer/controllers/include/: document_controller.h  properties_controller.h  toolbox_controller.h
ui-doc-viewer/controllers/src/: document_controller.cpp  properties_controller.cpp  toolbox_controller.cpp
ui-doc-viewer/models/include/: area.h  document.h
ui-doc-viewer/models/src/: area.cpp  document.cpp
ui-doc-viewer/ui-widgets/include/: combo_box_area_type.h  document_page_property.h  document_renderer.h  document_tab_view_widget.h  document_tab_widget.h  group_box_area_actions.h  mainwindow.h  pagination_widget.h  template_rect.h  tool_box_page_area.h
ui-doc-viewer/ui-widgets/src/: combo_box_area_type.cpp  document_page_property.cpp  document_renderer.cpp  document_tab_view_widget.cpp  document_tab_widget.cpp  group_box_area_actoins.cpp  mainwindow.cpp  pagination_widget.cpp  template_rect.cpp  tool_box_page_area.cpp
ui-doc-viewer/ui-widgets/views/: mainwindow.ui
ui-doc-viewer/utils/include/: Observable.h  Observer.h  types_utils.h
ui-doc-viewer/utils/src/: Observable.cpp
